--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ target-version = "py312"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
-ignore = ["E501"]  # Let formatter handle long lines
+ignore = [
+    "E501",
+    "F841",
+]  # Let formatter handle long lines
 exclude = [
     ".git",
     "__pycache__",
@@ -14,6 +17,7 @@ exclude = [
     "venv"
 ]
 fixable = [
+    "I",
     "F401",
 ]
 
